fix overlaping divs on mobile view for Café by adding rows

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,8 +186,7 @@
 
 .lp-loc-image {
     width:80%;
-    height:80%;
-    padding-bottom: 5px;    
+    height:80%;   
 }
 
 .lp-loc-social {
